@@ -426,6 +426,7 @@ ACE_Location_Node::dump (void) const
 
 ACE_Location_Node::ACE_Location_Node (void)
   : pathname_ (0),
+    must_delete_ (0),
     dll_ (),
     symbol_ (0)
 {
